# mars

./: .gitignore  CMakeLists.txt  README.md  manifest.xml  preGraphicsUpdate
app/: CMakeLists.txt  manifest.xml
app/configuration/: core_libs-nogui.in  core_libs.in  other_libs.in  other_libs_envire.in
app/src/: MARS.cpp
common/cfg_manager/: CMakeLists.txt  cfg_manager.pc.in  manifest.xml
common/utils/: CMakeLists.txt  manifest.xml
entity_generation/entity_factory/: CMakeLists.txt
entity_generation/smurf/: CMakeLists.txt  manifest.xml
envire_mars/: EnvireMars.h
graphics/: CMakeLists.txt
graphics/src/: GraphicsManager.cpp  QtOsgMixGraphicsWidget.cpp  QtOsgMixGraphicsWidget.h
gui/: CMakeLists.txt
gui/src/: MainGUIDefs.h
interfaces/: CMakeLists.txt  manifest.xml
interfaces/src/: JointData.cpp  JointData.h  MARSDefs.h  MotorData.cpp  MotorData.h  NodeData.cpp  NodeData.h  contact_params.h  sensor_bases.h
plugins/Plot3D/: CMakeLists.txt
plugins/SMURF2MarsTree/: CMakeLists.txt  manifest.xml
scene_loader/: CMakeLists.txt
sim/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  Makefile  cmake_install.cmake  compile_commands.json  config.h  manifest.xml  mars_Preferences.yaml  mars_sim.pc
sim/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_ItemManager.cpp  test_ItemPhysics.cpp  test_TreeMars.cpp  test_visualization_osg.cpp
smurf_loader/: CMakeLists.txt
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  EnvireMars.cpp  EnvireMars.h  Main.cpp
test/: CMakeLists.txt  test_Dummy.cpp
viz/: CMakeLists.txt
(+208 files in other folders)
